# animation-asset-manager

./: README.md  SPEC.md  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
.github/workflows/: release.yml
plugins/blender/: aam_connector.py
plugins/maya/: AAMConnector.py
scripts/: build.py  check.py  dev.py  web.py
src/: App.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
src-tauri/src/commands/: mod.rs
src-tauri/src/dcc/: mod.rs
src-tauri/src/models/: mod.rs
src-tauri/src/services/: decoder_service.rs  encoder_service.rs  mod.rs  sakugabooru_client.rs  storage_service.rs
src/components/annotation/: AnnotationCanvas.tsx  index.ts
src/components/sakugabooru/: SakugaSearchPanel.tsx  index.ts
src/components/viewer/: FrameViewer.tsx  index.ts
src/hooks/: useStore.ts
src/services/: api.ts
src/types/: index.ts
